---
source: crates/ruff_linter/src/rules/flake8_implicit_str_concat/mod.rs
---
ISC.py:9:3: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
   |
 8 |   _ = (
 9 | /   "abc" +
10 | |   "def"
   | |_______^ ISC003 (explicit-string-concatenation)
11 |   )
   |
   = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
6  6  |     "def"
7  7  | 
8  8  | _ = (
9     |-  "abc" +
   9  |+  "abc"
10 10 |   "def"
11 11 | )
12 12 | 

ISC.py:14:3: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
   |
13 |   _ = (
14 | /   f"abc" +
15 | |   "def"
   | |_______^ ISC003 (explicit-string-concatenation)
16 |   )
   |
   = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
11 11 | )
12 12 | 
13 13 | _ = (
14    |-  f"abc" +
   14 |+  f"abc"
15 15 |   "def"
16 16 | )
17 17 | 

ISC.py:19:3: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
   |
18 |   _ = (
19 | /   b"abc" +
20 | |   b"def"
   | |________^ ISC003 (explicit-string-concatenation)
21 |   )
   |
   = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
16 16 | )
17 17 | 
18 18 | _ = (
19    |-  b"abc" +
   19 |+  b"abc"
20 20 |   b"def"
21 21 | )
22 22 | 

ISC.py:78:10: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
   |
77 |   # Explicitly concatenated nested f-strings
78 |   _ = f"a {f"first"
   |  __________^
79 | |     + f"second"} d"
   | |_______________^ ISC003 (explicit-string-concatenation)
80 |   _ = f"a {f"first {f"middle"}"
81 |       + f"second"} d"
   |
   = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
76 76 | 
77 77 | # Explicitly concatenated nested f-strings
78 78 | _ = f"a {f"first"
79    |-    + f"second"} d"
   79 |+     f"second"} d"
80 80 | _ = f"a {f"first {f"middle"}"
81 81 |     + f"second"} d"
82 82 | 

ISC.py:80:10: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
   |
78 |   _ = f"a {f"first"
79 |       + f"second"} d"
80 |   _ = f"a {f"first {f"middle"}"
   |  __________^
81 | |     + f"second"} d"
   | |_______________^ ISC003 (explicit-string-concatenation)
82 |
83 |   # See https://github.com/astral-sh/ruff/issues/12936
   |
   = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
78 78 | _ = f"a {f"first"
79 79 |     + f"second"} d"
80 80 | _ = f"a {f"first {f"middle"}"
81    |-    + f"second"} d"
   81 |+     f"second"} d"
82 82 | 
83 83 | # See https://github.com/astral-sh/ruff/issues/12936
84 84 | _ = "\12""0" # fix should be "\0120"

ISC.py:110:5: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
109 |   _ = (
110 | /     rf"raw_f{x}" +
111 | |     r"raw_normal"
    | |_________________^ ISC003 (explicit-string-concatenation)
112 |   )
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
107 107 | )
108 108 | 
109 109 | _ = (
110     |-    rf"raw_f{x}" +
    110 |+    rf"raw_f{x}"
111 111 |     r"raw_normal"
112 112 | )
113 113 | 

ISC.py:117:5: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
115 |   # Different prefix combinations
116 |   _ = (
117 | /     u"unicode" +
118 | |     r"raw"
    | |__________^ ISC003 (explicit-string-concatenation)
119 |   )
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
114 114 | 
115 115 | # Different prefix combinations
116 116 | _ = (
117     |-    u"unicode" +
    117 |+    u"unicode"
118 118 |     r"raw"
119 119 | )
120 120 | 

ISC.py:122:5: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
121 |   _ = (
122 | /     rb"raw_bytes" +
123 | |     b"normal_bytes"
    | |___________________^ ISC003 (explicit-string-concatenation)
124 |   )
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
119 119 | )
120 120 | 
121 121 | _ = (
122     |-    rb"raw_bytes" +
    122 |+    rb"raw_bytes"
123 123 |     b"normal_bytes"
124 124 | )
125 125 | 

ISC.py:127:5: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
126 |   _ = (
127 | /     b"bytes" +
128 | |     b"with_bytes"
    | |_________________^ ISC003 (explicit-string-concatenation)
129 |   )
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
124 124 | )
125 125 | 
126 126 | _ = (
127     |-    b"bytes" +
    127 |+    b"bytes"
128 128 |     b"with_bytes"
129 129 | )
130 130 | 

ISC.py:133:6: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
131 |   # Repeated concatenation
132 |
133 |   _ = ("a" +
    |  ______^
134 | |     "b" +
    | |_______^ ISC003 (explicit-string-concatenation)
135 |       "c" +
136 |       "d" + "e"
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
130 130 | 
131 131 | # Repeated concatenation
132 132 | 
133     |-_ = ("a" +
    133 |+_ = ("a"
134 134 |     "b" +
135 135 |     "c" +
136 136 |     "d" + "e"

ISC.py:139:6: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
137 |   )
138 |
139 |   _ = ("a"
    |  ______^
140 | |     + "b"
    | |_________^ ISC003 (explicit-string-concatenation)
141 |       + "c"
142 |       + "d"
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
137 137 | )
138 138 | 
139 139 | _ = ("a"
140     |-    + "b"
    140 |+     "b"
141 141 |     + "c"
142 142 |     + "d"
143 143 |     + "e"

ISC.py:160:5: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
159 |   _ = (
160 | /     "first"
161 | |     +    "second"  # extra spaces around +
    | |_________________^ ISC003 (explicit-string-concatenation)
162 |   )
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
158 158 | 
159 159 | _ = (
160 160 |     "first"
161     |-    +    "second"  # extra spaces around +
    161 |+        "second"  # extra spaces around +
162 162 | )
163 163 | 
164 164 | _ = (

ISC.py:165:5: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
164 |   _ = (
165 | /     "first"    +  # trailing spaces before +
166 | |     "second"
    | |____________^ ISC003 (explicit-string-concatenation)
167 |   )
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
162 162 | )
163 163 | 
164 164 | _ = (
165     |-    "first"    +  # trailing spaces before +
    165 |+    "first"  # trailing spaces before +
166 166 |     "second"
167 167 | )
168 168 | 

ISC.py:170:5: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
169 |   _ = ((
170 | /     "deep" +
171 | |     "nesting"
    | |_____________^ ISC003 (explicit-string-concatenation)
172 |   ))
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
167 167 | )
168 168 | 
169 169 | _ = ((
170     |-    "deep" +
    170 |+    "deep"
171 171 |     "nesting"
172 172 | ))
173 173 | 

ISC.py:175:5: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
174 |   _ = (
175 | /     "contains + plus" +
176 | |     "another string"
    | |____________________^ ISC003 (explicit-string-concatenation)
177 |   )
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
172 172 | ))
173 173 | 
174 174 | _ = (
175     |-    "contains + plus" +
    175 |+    "contains + plus"
176 176 |     "another string"
177 177 | )
178 178 | 

ISC.py:180:5: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
179 |   _ = (
180 | /     "start"
181 | |         # leading comment
182 | |     + "end"
    | |___________^ ISC003 (explicit-string-concatenation)
183 |   )
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
179 179 | _ = (
180 180 |     "start"
181 181 | 		# leading comment
182     |-    + "end"
    182 |+     "end"
183 183 | )
184 184 | 
185 185 | _ = (

ISC.py:186:5: ISC003 (explicit-string-concatenation) [*] Explicitly concatenated string should be implicitly concatenated
    |
185 |   _ = (
186 | /     "start" +
187 | |         # leading comment
188 | |     "end"
    | |_________^ ISC003 (explicit-string-concatenation)
189 |   )
    |
    = help: Remove redundant '+' operator to implicitly concatenate

ℹ Safe fix
183 183 | )
184 184 | 
185 185 | _ = (
186     |-    "start" +
    186 |+    "start"
187 187 | 		# leading comment
188 188 |     "end"
189 189 | )
